Fix horizontal scroll issue on mobile devices

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,5 +1,4 @@
 .header {
-  height: 100vh;
   background-image: url('../assets/backgrounds/mobile-cover-photo.png');
   background-color: $main-dark-color;
   background-size: cover;
