--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -29,7 +29,7 @@
     background-color: $main-dark-color;
     transform: scale(0);
     transform-origin: left;
-    transition: transform 0.3s ease;
+    transition: transform 0.5s ease;
   }
 
   &:hover::after {
