--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -8,8 +8,14 @@
 
   scroll-behavior: smooth;
 
+  width: 100%;
+  overflow-x: hidden;
+
   &__body {
     margin: 0;
+
+    width: 100%;
+    overflow-x: hidden;
   }
 
   &__menu {
